Changed header and footer

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -15,7 +15,7 @@
 		<div class="flex-ns justify-between">
 
 			<div>
-				<h3 class="f4 b lh-title mb1 primary">Kaldi</h3>
+				<h3 class="f4 b lh-title mb1 primary">ETCINITD Le blog</h3>
 				<ul class="mb3">
 					<li><a href="/" class="link">Home</a></li>
 					<li><a href="/products" class="link">Our products</a></li>
@@ -26,15 +26,15 @@
 			</div>
 
 			<div>
-				<h3 class="f4 b lh-title mb1 primary">Find out more</h3>
+				<h3 class="f4 b lh-title mb1 primary">En savoir plus</h3>
 				<ul class="mb3">
 					<li><a href="/post/jamaica-blue/" class="link">Latest offers</a></li>
-					<li><a href="/contact" class="link">Schedule and appointment</a></li>
+					<li><a href="/contact" class="link">Contact</a></li>
 				</ul>
 			</div>
 
 			<div>
-				<h3 class="f4 b lh-title mb2 primary">Social media</h3>
+				<h3 class="f4 b lh-title mb2 primary">Réseaux Sociaux</h3>
 				<ul class="mhn2">
 					{{ partial "social-icon" (dict "link" "#" "svg" "facebook") }}
 					{{ partial "social-icon" (dict "link" "#" "svg" "twitter") }}
