--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 
-		<html lang="en-US">
-		<title>{{ .Title }} | Kaldi</title>
+		<html lang="fr-FR">
+		<title>{{ .Title }} | ETCINITD</title>
 		<link rel="stylesheet" href="/css/main.css"/>
 
 		<meta charset="utf-8">
